@@ -1234,7 +1234,7 @@ void idServerMainSystemLocal::PacketEvent(netadr_t from, msg_t *msg) {
     // stupid address translating routers
     MSG_BeginReadingOOB(msg);
     MSG_ReadLong(msg);           // sequence number
-    qport = MSG_ReadShort(msg) & 0xffff;
+    qport = MSG_ReadShort(msg) & 0x7fff;
 
     // find which client the message is from
     for(i = 0, cl = svs.clients; i < sv_maxclients->integer; i++, cl++) {
